compiler/fir/resolve/testData/resolve/nestedClassContructor.kt
class A() {
    class B() : A() {
        fun copy() = <!AMBIGUITY!>B<!>()
    }
}
